src/gui/kernel/qguiapplication.cpp
@@ -2706,6 +2706,7 @@ void QGuiApplicationPrivate::processCloseEvent(QWindowSystemInterfacePrivate::Cl
     if (e->window.data()->d_func()->blockedByModalWindow && !e->window.data()->d_func()->inClose) {
         // a modal window is blocking this window, don't allow close events through, unless they
         // originate from a call to QWindow::close.
+        e->eventAccepted = false;
         return;
     }
 
